借助CGLIB实现AOP代理

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>7.0.0.jre8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.7</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
